使用 Colaboratory 建立

--- a/作業3.ipynb
+++ b/作業3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJFKZ+mUB1cs8wVtdvwyIt",
+      "authorship_tag": "ABX9TyNutfLL8LWqA8d3fiHIzFeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,21 +29,22 @@
     {
       "cell_type": "code",
       "source": [
-        "count = 0  \n",
-        "for i in range(0, 1001):  \n",
-        "    if i % 2 != 0 and i % 3 != 0 and i % 5 != 0 and i % 7 != 0:    \n",
-        "        print(i)\n",
-        "        count=count+1   \n",
-        "print(\"共有\", count, \"個数滿足條件。\")"
+        "count = 0   \n",
+        "for i in range(1, 1001):   \n",
+        "    if i % 2 != 0 and i % 3 != 0 and i % 5 != 0 and i % 7 != 0:   \n",
+        "        print(i)   \n",
+        "        count += 1   \n",
+        "print(\"共有\", count, \"個數字能被2, 3, 5, 7整除\")  \n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oT60Vuyl1F85",
-        "outputId": "9b292586-4f88-415c-9384-cdb65bd0abbc"
+        "id": "lGV-w9s2-cY7",
+        "outputId": "1a4c0f43-8af3-4811-82d5-651ea5473d53"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +278,7 @@
             "989\n",
             "991\n",
             "997\n",
-            "共有 228 個数滿足條件。\n"
+            "共有 228 個數字能被2, 3, 5, 7整除\n"
           ]
         }
       ]
